apps/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: vikunja
          image: vikunja/vikunja:latest
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: files
              mountPath: /app/vikunja/files
          resources:
            limits:
              memory: 256Mi
              cpu: "500m"
            requests:
              memory: 128Mi
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: vikunja-files
